--- a/pln-docker-compose.yml
+++ b/pln-docker-compose.yml
@@ -35,7 +35,7 @@ services:
 
   # Agent containers, in the same network with the sim. Agent 1 and 2 are identical here, replace the dockerfile for your own agents. For single vehicle timed trials, make sure that you're using only ONE agent that subscribes to the topics corresponded to EGO_ID. You can comment out the section for either agent1 or agent2 to make sure only one container runs.
   agent1:
-    container_name: diyrobocars_agent0_teamname
+    container_name: DmitryAnanyev
     build:
       context: .
       # agent 1's corresponding Dockerfile
@@ -52,10 +52,10 @@ services:
     #image: parkinglotnerds/race7:version_0.1
     #
     # VVVV
-    image: yourusername/racexx:version_0.1
+    image: altexdim/donkeycar_race2:v1
     #entrypoint: ./start_test_client.sh
     #entrypoint: bash
     #entrypoint: python /root/rC3car/test_client.py
     #entrypoint: /root/race7/pln_wait.sh
-    entrypoint: python3 /root/race7/manage.py drive --model=/root/race7/models/warren_pln5.h5 
-
+    #entrypoint: python3 /root/myrace/manage.py drive --model=/root/myrace/models/
+    entrypoint: python3 /root/myrace/manage.py drive --model /root/myrace/models/mypilot_circuit_launch_16.h5 --myconfig=myconfig-trnm.py
